PositFFT/logs/hls_run_csim_80164.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/PositFFT 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\Burak\Desktop\TAU\HLS\PositFFT\PositFFT\posit.hpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\Burak\Desktop\TAU\HLS\PositFFT\PositFFT\posit_lib.cpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit_lib.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=posit_fft_test.cpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit_fft_test.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=dFFT' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xazu3teg-sfvc784-1Q-q' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xazu3teg-sfvc784-1Q-q'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../posit_lib.cpp in debug mode
csim.mk:94: recipe for target 'obj/posit_lib.o' failed
In file included from ../../../../posit_lib.cpp:1:
In file included from ../../../../posit.hpp:1:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../posit_lib.cpp:675:33: warning: shifting a negative signed value is undefined [-Wshift-negative-value]
        sf_t sf_x,sf_y,sf_r,max =((2-N)<<ES);
                                  ~~~~~^
../../../../posit_lib.cpp:1291:9: error: no matching function for call to 'pAccumulateFC'
        pAccumulateFC(k, sampleCount, signal, realSum, imagSum);
        ^~~~~~~~~~~~~
../../../../posit_lib.cpp:1252:6: note: candidate function not viable: 3rd argument ('const hls::stream<ps_t>' (aka 'const stream<POSIT>')) would lose const qualifier
void pAccumulateFC(int k, int sampleCount, hls::stream<ps_t>& signal, ps_t& realSum, ps_t& imagSum) {
     ^
../../../../posit_lib.cpp:1309:9: error: no matching function for call to 'dAccumulateFC'
        dAccumulateFC(k, sampleCount, signal, realSum, imagSum);
        ^~~~~~~~~~~~~
../../../../posit_lib.cpp:1197:6: note: candidate function not viable: 3rd argument ('const hls::stream<double>') would lose const qualifier
void dAccumulateFC(int k, int sampleCount, hls::stream<double>& signal, double& realSum, double& imagSum) {
     ^
../../../../posit_lib.cpp:1327:9: error: no matching function for call to 'fAccumulateFC'
        fAccumulateFC(k, sampleCount, signal, realSum, imagSum);
        ^~~~~~~~~~~~~
../../../../posit_lib.cpp:1228:6: note: candidate function not viable: 3rd argument ('const hls::stream<float>') would lose const qualifier
void fAccumulateFC(int k, int sampleCount, hls::stream<float>& signal, float& realSum, float& imagSum) {
     ^
2 warnings and 3 errors generated.
make: *** [obj/posit_lib.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 0 seconds. Total CPU system time: 0 seconds. Total elapsed time: 13.047 seconds; peak allocated memory: 163.711 MB.
